added edit profile and profile page